--- a/InterstellarOutpost/InterstellarOutpost/InterstellarOutpost.vcxproj
+++ b/InterstellarOutpost/InterstellarOutpost/InterstellarOutpost.vcxproj
@@ -129,4 +129,10 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ItemGroup>
+    <ClCompile Include="InterstellarOutpost.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="VoxelShaders.hlsl" />
+  </ItemGroup>
 </Project>
